--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 body{
     margin: 0;
-    background: linear-gradient(to right, #00EE00,#00EEFF);
+    background: linear-gradient(to right, #AFEEEE,#191970);
 }
 
 .calculator-grid{
